fix: add contents permission to deploy job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   deploy:
     permissions:
+      contents: write
       pages: write
       id-token: write
     runs-on: ubuntu-latest
